force-app/main/default/objects/PWChrono_Salary_Slip_Line__c/PWChrono_Salary_Slip_Line__c.object-meta.xml
<CustomObject>
    <description
  >Immutable earning or deduction line captured for a salary slip.</description>
    <label>Salary Slip Line</label>
    <nameField>
        <displayFormat>LINE-{000000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salary Slip Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>