force-app/main/default/objects/PWChrono_Salary_Slip_Line__c/fields/Is_Taxable__c.field-meta.xml
<CustomField>
    <fullName>Is_Taxable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Taxable</label>
    <type>Checkbox</type>
</CustomField>