force-app/main/default/objects/PWChrono_Salary_Slip_Line__c/fields/Label_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Label_Snapshot__c</fullName>
    <description
  >Component label frozen when the salary slip is generated.</description>
    <label>Label Snapshot</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>