force-app/main/default/objects/PWChrono_Salary_Slip_Line__c/fields/Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Type__c</fullName>
    <label>Line Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted
      >false</sorted>
        <value><fullName>Earning</fullName><default>true</default><label
        >Earning</label></value>
        <value><fullName>Deduction</fullName><default>false</default><label
        >Deduction</label></value>
    </valueSetDefinition></valueSet>
</CustomField>