force-app/main/default/objects/PWChrono_Salary_Slip_Line__c/fields/Salary_Component__c.field-meta.xml
<CustomField>
    <fullName>Salary_Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Optional source component. Rendering uses Label_Snapshot__c so historical output is stable.</description>
    <label>Salary Component</label>
    <referenceTo>PWChrono_Salary_Component__c</referenceTo>
    <relationshipLabel>Salary Slip Lines</relationshipLabel>
    <relationshipName>Salary_Slip_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>