force-app/main/default/objects/PWChrono_Salary_Slip_Line__c/fields/Salary_Slip__c.field-meta.xml
<CustomField>
    <fullName>Salary_Slip__c</fullName>
    <label>Salary Slip</label>
    <referenceTo>PWChrono_Salary_Slip__c</referenceTo>
    <relationshipLabel>Salary Slip Lines</relationshipLabel>
    <relationshipName>Salary_Slip_Lines</relationshipName>
    <type>MasterDetail</type>
</CustomField>