force-app/main/default/objects/PWChrono_Salary_Slip_Line__c/fields/YTD_Amount__c.field-meta.xml
<CustomField>
    <fullName>YTD_Amount__c</fullName>
    <label>YTD Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>